@@ -56,6 +56,38 @@ name|CommonsHttpSolrServer
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|QueryResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrException
+import|;
+end_import
+
 begin_comment
 comment|/**  *   * @version $Id$  * @since solr 1.3  */
 end_comment
@@ -135,6 +167,46 @@ argument_list|()
 operator|.
 name|getClass
 argument_list|()
+comment|//If one is using OpenDNS, then you don't get UnknownHostException, instead you get back that the query couldn't execute
+operator|||
+operator|(
+name|sse
+operator|.
+name|getRootCause
+argument_list|()
+operator|.
+name|getClass
+argument_list|()
+operator|==
+name|SolrException
+operator|.
+name|class
+operator|&&
+operator|(
+operator|(
+name|SolrException
+operator|)
+name|sse
+operator|.
+name|getRootCause
+argument_list|()
+operator|)
+operator|.
+name|code
+argument_list|()
+operator|==
+literal|302
+operator|&&
+name|sse
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"Error executing query"
+argument_list|)
+operator|)
 argument_list|)
 expr_stmt|;
 block|}
